--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
+    "uikit": "^3.0.0-beta.28",
     "vue": "^2.3.4",
     "vue-router": "^2.7.0"
   }
