--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tornillos-web-app",
+  "name": "especias-el-trebol-web-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -27,11 +27,14 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.29.0",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "vue-loader": "^13.0.1",
     "vue-template-compiler": "^2.3.4",
     "webpack": "^3.0.0",
@@ -39,8 +42,8 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.3.7",
     "jquery": "^3.2.1",
-    "uikit": "^3.0.0-beta.28",
     "vue": "^2.3.4",
     "vue-router": "^2.7.0"
   }
