--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config config/webpack.dev.js --inline --progress --port 8080 --open",
+    "build": "rm -rf dist && node_modules/.bin/webpack --config config/webpack.prod.js --progress --profile --bail",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +25,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.4",
@@ -42,6 +44,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "babel-runtime": "^6.25.0",
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.2.1",
     "vue": "^2.3.4",
