--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "babel-runtime": "^6.25.0",
     "bootstrap-sass": "^3.3.7",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.2.1",
     "vue": "^2.3.4",
     "vue-router": "^2.7.0"
