--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "babel-runtime": "^6.25.0",
     "bootstrap-sass": "^3.3.7",
+    "cropperjs": "^1.0.0-rc.3",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.2.1",
     "vue": "^2.3.4",
